# tat-analyzer

./: .gitignore  LICENSE  README.md  app.py  disclaimer  pyproject.toml
.streamlit/: config.toml
pages/: 01_overview.py  02_strategy_analysis.py  03_trade_details.py  04_risk_analysis.py
utils/: __init__.py  calculations.py  charts.py  constants.py  data_loader.py  filters.py  security.py  session_manager.py
